# jupyterhub-virtualdesktopspawner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: workflow.yml
aws-iam/: aws-ec2ssm-iam-policy.json
ci/: run-localstack.sh
configs/: z2jh-linuxdesktops.yaml  z2jh-windowsdesktops.yaml
tests/: conftest.py  test_awsec2.py
virtualdesktopspawner/: __init__.py  awsec2.py  kubeec2spawner.py
